Vezba 10/9/micko.output
Grammar

    0 $accept: program $end

    1 program: global_list function_list

    2 global_list: %empty
    3            | global_list global_var

    4 global_var: type _ID _SEMICOLON

    5 function_list: function
    6              | function_list function

    7 $@1: %empty

    8 $@2: %empty

    9 function: type _ID $@1 _LPAREN parameter _RPAREN $@2 body

   10 type: _TYPE

   11 parameter: %empty
   12          | type _ID

   13 $@3: %empty

   14 body: _LBRACKET variable_list $@3 statement_list _RBRACKET

   15 variable_list: %empty
   16              | variable_list variable

   17 variable: type _ID _SEMICOLON

   18 statement_list: %empty
   19               | statement_list statement

   20 statement: compound_statement
   21          | assignment_statement
   22          | if_statement
   23          | return_statement

   24 compound_statement: _LBRACKET statement_list _RBRACKET

   25 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON

   26 num_exp: exp
   27        | num_exp _AROP exp

   28 exp: literal
   29    | _ID
   30    | function_call
   31    | _LPAREN num_exp _RPAREN

   32 literal: _INT_NUMBER
   33        | _UINT_NUMBER

   34 $@4: %empty

   35 function_call: _ID $@4 _LPAREN argument _RPAREN

   36 argument: %empty
   37         | num_exp

   38 if_statement: if_part
   39             | if_part _ELSE statement

   40 $@5: %empty

   41 $@6: %empty

   42 if_part: _IF _LPAREN $@5 rel_exp $@6 e _RPAREN statement

   43 e: %empty

   44 $@7: %empty

   45 e: _AND $@7 rel_exp

   46 $@8: %empty

   47 e: _OR $@8 rel_exp

   48 rel_exp: num_exp _RELOP num_exp

   49 return_statement: _RETURN num_exp _SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
_TYPE (258) 10
_IF (259) 42
_ELSE (260) 39
_RETURN (261) 49
_ID (262) 4 9 12 17 25 29 35
_INT_NUMBER (263) 32
_UINT_NUMBER (264) 33
_LPAREN (265) 9 31 35 42
_RPAREN (266) 9 31 35 42
_LBRACKET (267) 14 24
_RBRACKET (268) 14 24
_ASSIGN (269) 25
_SEMICOLON (270) 4 17 25 49
_AROP (271) 27
_RELOP (272) 48
_AND (273) 45
_OR (274) 47
ONLY_IF (275)


Nonterminals, with rules where they appear

$accept (21)
    on left: 0
program (22)
    on left: 1, on right: 0
global_list (23)
    on left: 2 3, on right: 1 3
global_var (24)
    on left: 4, on right: 3
function_list (25)
    on left: 5 6, on right: 1 6
function (26)
    on left: 9, on right: 5 6
$@1 (27)
    on left: 7, on right: 9
$@2 (28)
    on left: 8, on right: 9
type (29)
    on left: 10, on right: 4 9 12 17
parameter (30)
    on left: 11 12, on right: 9
body (31)
    on left: 14, on right: 9
$@3 (32)
    on left: 13, on right: 14
variable_list (33)
    on left: 15 16, on right: 14 16
variable (34)
    on left: 17, on right: 16
statement_list (35)
    on left: 18 19, on right: 14 19 24
statement (36)
    on left: 20 21 22 23, on right: 19 39 42
compound_statement (37)
    on left: 24, on right: 20
assignment_statement (38)
    on left: 25, on right: 21
num_exp (39)
    on left: 26 27, on right: 25 27 31 37 48 49
exp (40)
    on left: 28 29 30 31, on right: 26 27
literal (41)
    on left: 32 33, on right: 28
function_call (42)
    on left: 35, on right: 30
$@4 (43)
    on left: 34, on right: 35
argument (44)
    on left: 36 37, on right: 35
if_statement (45)
    on left: 38 39, on right: 22
if_part (46)
    on left: 42, on right: 38 39
$@5 (47)
    on left: 40, on right: 42
$@6 (48)
    on left: 41, on right: 42
e (49)
    on left: 43 45 47, on right: 42
$@7 (50)
    on left: 44, on right: 45
$@8 (51)
    on left: 46, on right: 47
rel_exp (52)
    on left: 48, on right: 42 45 47
return_statement (53)
    on left: 49, on right: 23


State 0

    0 $accept: . program $end

    $default  reduce using rule 2 (global_list)

    program      go to state 1
    global_list  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: global_list . function_list
    3 global_list: global_list . global_var

    _TYPE  shift, and go to state 4

    global_var     go to state 5
    function_list  go to state 6
    function       go to state 7
    type           go to state 8


State 3

    0 $accept: program $end .

    $default  accept


State 4

   10 type: _TYPE .

    $default  reduce using rule 10 (type)


State 5

    3 global_list: global_list global_var .

    $default  reduce using rule 3 (global_list)


State 6

    1 program: global_list function_list .
    6 function_list: function_list . function

    _TYPE  shift, and go to state 4

    $default  reduce using rule 1 (program)

    function  go to state 9
    type      go to state 10


State 7

    5 function_list: function .

    $default  reduce using rule 5 (function_list)


State 8

    4 global_var: type . _ID _SEMICOLON
    9 function: type . _ID $@1 _LPAREN parameter _RPAREN $@2 body

    _ID  shift, and go to state 11


State 9

    6 function_list: function_list function .

    $default  reduce using rule 6 (function_list)


State 10

    9 function: type . _ID $@1 _LPAREN parameter _RPAREN $@2 body

    _ID  shift, and go to state 12


State 11

    4 global_var: type _ID . _SEMICOLON
    9 function: type _ID . $@1 _LPAREN parameter _RPAREN $@2 body

    _SEMICOLON  shift, and go to state 13

    $default  reduce using rule 7 ($@1)

    $@1  go to state 14


State 12

    9 function: type _ID . $@1 _LPAREN parameter _RPAREN $@2 body

    $default  reduce using rule 7 ($@1)

    $@1  go to state 14


State 13

    4 global_var: type _ID _SEMICOLON .

    $default  reduce using rule 4 (global_var)


State 14

    9 function: type _ID $@1 . _LPAREN parameter _RPAREN $@2 body

    _LPAREN  shift, and go to state 15


State 15

    9 function: type _ID $@1 _LPAREN . parameter _RPAREN $@2 body

    _TYPE  shift, and go to state 4

    $default  reduce using rule 11 (parameter)

    type       go to state 16
    parameter  go to state 17


State 16

   12 parameter: type . _ID

    _ID  shift, and go to state 18


State 17

    9 function: type _ID $@1 _LPAREN parameter . _RPAREN $@2 body

    _RPAREN  shift, and go to state 19


State 18

   12 parameter: type _ID .

    $default  reduce using rule 12 (parameter)


State 19

    9 function: type _ID $@1 _LPAREN parameter _RPAREN . $@2 body

    $default  reduce using rule 8 ($@2)

    $@2  go to state 20


State 20

    9 function: type _ID $@1 _LPAREN parameter _RPAREN $@2 . body

    _LBRACKET  shift, and go to state 21

    body  go to state 22


State 21

   14 body: _LBRACKET . variable_list $@3 statement_list _RBRACKET

    $default  reduce using rule 15 (variable_list)

    variable_list  go to state 23


State 22

    9 function: type _ID $@1 _LPAREN parameter _RPAREN $@2 body .

    $default  reduce using rule 9 (function)


State 23

   14 body: _LBRACKET variable_list . $@3 statement_list _RBRACKET
   16 variable_list: variable_list . variable

    _TYPE  shift, and go to state 4

    $default  reduce using rule 13 ($@3)

    type      go to state 24
    $@3       go to state 25
    variable  go to state 26


State 24

   17 variable: type . _ID _SEMICOLON

    _ID  shift, and go to state 27


State 25

   14 body: _LBRACKET variable_list $@3 . statement_list _RBRACKET

    $default  reduce using rule 18 (statement_list)

    statement_list  go to state 28


State 26

   16 variable_list: variable_list variable .

    $default  reduce using rule 16 (variable_list)


State 27

   17 variable: type _ID . _SEMICOLON

    _SEMICOLON  shift, and go to state 29


State 28

   14 body: _LBRACKET variable_list $@3 statement_list . _RBRACKET
   19 statement_list: statement_list . statement

    _IF        shift, and go to state 30
    _RETURN    shift, and go to state 31
    _ID        shift, and go to state 32
    _LBRACKET  shift, and go to state 33
    _RBRACKET  shift, and go to state 34

    statement             go to state 35
    compound_statement    go to state 36
    assignment_statement  go to state 37
    if_statement          go to state 38
    if_part               go to state 39
    return_statement      go to state 40


State 29

   17 variable: type _ID _SEMICOLON .

    $default  reduce using rule 17 (variable)


State 30

   42 if_part: _IF . _LPAREN $@5 rel_exp $@6 e _RPAREN statement

    _LPAREN  shift, and go to state 41


State 31

   49 return_statement: _RETURN . num_exp _SEMICOLON

    _ID           shift, and go to state 42
    _INT_NUMBER   shift, and go to state 43
    _UINT_NUMBER  shift, and go to state 44
    _LPAREN       shift, and go to state 45

    num_exp        go to state 46
    exp            go to state 47
    literal        go to state 48
    function_call  go to state 49


State 32

   25 assignment_statement: _ID . _ASSIGN num_exp _SEMICOLON

    _ASSIGN  shift, and go to state 50


State 33

   24 compound_statement: _LBRACKET . statement_list _RBRACKET

    $default  reduce using rule 18 (statement_list)

    statement_list  go to state 51


State 34

   14 body: _LBRACKET variable_list $@3 statement_list _RBRACKET .

    $default  reduce using rule 14 (body)


State 35

   19 statement_list: statement_list statement .

    $default  reduce using rule 19 (statement_list)


State 36

   20 statement: compound_statement .

    $default  reduce using rule 20 (statement)


State 37

   21 statement: assignment_statement .

    $default  reduce using rule 21 (statement)


State 38

   22 statement: if_statement .

    $default  reduce using rule 22 (statement)


State 39

   38 if_statement: if_part .
   39             | if_part . _ELSE statement

    _ELSE  shift, and go to state 52

    $default  reduce using rule 38 (if_statement)


State 40

   23 statement: return_statement .

    $default  reduce using rule 23 (statement)


State 41

   42 if_part: _IF _LPAREN . $@5 rel_exp $@6 e _RPAREN statement

    $default  reduce using rule 40 ($@5)

    $@5  go to state 53


State 42

   29 exp: _ID .
   35 function_call: _ID . $@4 _LPAREN argument _RPAREN

    _LPAREN   reduce using rule 34 ($@4)
    $default  reduce using rule 29 (exp)

    $@4  go to state 54


State 43

   32 literal: _INT_NUMBER .

    $default  reduce using rule 32 (literal)


State 44

   33 literal: _UINT_NUMBER .

    $default  reduce using rule 33 (literal)


State 45

   31 exp: _LPAREN . num_exp _RPAREN

    _ID           shift, and go to state 42
    _INT_NUMBER   shift, and go to state 43
    _UINT_NUMBER  shift, and go to state 44
    _LPAREN       shift, and go to state 45

    num_exp        go to state 55
    exp            go to state 47
    literal        go to state 48
    function_call  go to state 49


State 46

   27 num_exp: num_exp . _AROP exp
   49 return_statement: _RETURN num_exp . _SEMICOLON

    _SEMICOLON  shift, and go to state 56
    _AROP       shift, and go to state 57


State 47

   26 num_exp: exp .

    $default  reduce using rule 26 (num_exp)


State 48

   28 exp: literal .

    $default  reduce using rule 28 (exp)


State 49

   30 exp: function_call .

    $default  reduce using rule 30 (exp)


State 50

   25 assignment_statement: _ID _ASSIGN . num_exp _SEMICOLON

    _ID           shift, and go to state 42
    _INT_NUMBER   shift, and go to state 43
    _UINT_NUMBER  shift, and go to state 44
    _LPAREN       shift, and go to state 45

    num_exp        go to state 58
    exp            go to state 47
    literal        go to state 48
    function_call  go to state 49


State 51

   19 statement_list: statement_list . statement
   24 compound_statement: _LBRACKET statement_list . _RBRACKET

    _IF        shift, and go to state 30
    _RETURN    shift, and go to state 31
    _ID        shift, and go to state 32
    _LBRACKET  shift, and go to state 33
    _RBRACKET  shift, and go to state 59

    statement             go to state 35
    compound_statement    go to state 36
    assignment_statement  go to state 37
    if_statement          go to state 38
    if_part               go to state 39
    return_statement      go to state 40


State 52

   39 if_statement: if_part _ELSE . statement

    _IF        shift, and go to state 30
    _RETURN    shift, and go to state 31
    _ID        shift, and go to state 32
    _LBRACKET  shift, and go to state 33

    statement             go to state 60
    compound_statement    go to state 36
    assignment_statement  go to state 37
    if_statement          go to state 38
    if_part               go to state 39
    return_statement      go to state 40


State 53

   42 if_part: _IF _LPAREN $@5 . rel_exp $@6 e _RPAREN statement

    _ID           shift, and go to state 42
    _INT_NUMBER   shift, and go to state 43
    _UINT_NUMBER  shift, and go to state 44
    _LPAREN       shift, and go to state 45

    num_exp        go to state 61
    exp            go to state 47
    literal        go to state 48
    function_call  go to state 49
    rel_exp        go to state 62


State 54

   35 function_call: _ID $@4 . _LPAREN argument _RPAREN

    _LPAREN  shift, and go to state 63


State 55

   27 num_exp: num_exp . _AROP exp
   31 exp: _LPAREN num_exp . _RPAREN

    _RPAREN  shift, and go to state 64
    _AROP    shift, and go to state 57


State 56

   49 return_statement: _RETURN num_exp _SEMICOLON .

    $default  reduce using rule 49 (return_statement)


State 57

   27 num_exp: num_exp _AROP . exp

    _ID           shift, and go to state 42
    _INT_NUMBER   shift, and go to state 43
    _UINT_NUMBER  shift, and go to state 44
    _LPAREN       shift, and go to state 45

    exp            go to state 65
    literal        go to state 48
    function_call  go to state 49


State 58

   25 assignment_statement: _ID _ASSIGN num_exp . _SEMICOLON
   27 num_exp: num_exp . _AROP exp

    _SEMICOLON  shift, and go to state 66
    _AROP       shift, and go to state 57


State 59

   24 compound_statement: _LBRACKET statement_list _RBRACKET .

    $default  reduce using rule 24 (compound_statement)


State 60

   39 if_statement: if_part _ELSE statement .

    $default  reduce using rule 39 (if_statement)


State 61

   27 num_exp: num_exp . _AROP exp
   48 rel_exp: num_exp . _RELOP num_exp

    _AROP   shift, and go to state 57
    _RELOP  shift, and go to state 67


State 62

   42 if_part: _IF _LPAREN $@5 rel_exp . $@6 e _RPAREN statement

    $default  reduce using rule 41 ($@6)

    $@6  go to state 68


State 63

   35 function_call: _ID $@4 _LPAREN . argument _RPAREN

    _ID           shift, and go to state 42
    _INT_NUMBER   shift, and go to state 43
    _UINT_NUMBER  shift, and go to state 44
    _LPAREN       shift, and go to state 45

    $default  reduce using rule 36 (argument)

    num_exp        go to state 69
    exp            go to state 47
    literal        go to state 48
    function_call  go to state 49
    argument       go to state 70


State 64

   31 exp: _LPAREN num_exp _RPAREN .

    $default  reduce using rule 31 (exp)


State 65

   27 num_exp: num_exp _AROP exp .

    $default  reduce using rule 27 (num_exp)


State 66

   25 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON .

    $default  reduce using rule 25 (assignment_statement)


State 67

   48 rel_exp: num_exp _RELOP . num_exp

    _ID           shift, and go to state 42
    _INT_NUMBER   shift, and go to state 43
    _UINT_NUMBER  shift, and go to state 44
    _LPAREN       shift, and go to state 45

    num_exp        go to state 71
    exp            go to state 47
    literal        go to state 48
    function_call  go to state 49


State 68

   42 if_part: _IF _LPAREN $@5 rel_exp $@6 . e _RPAREN statement

    _AND  shift, and go to state 72
    _OR   shift, and go to state 73

    $default  reduce using rule 43 (e)

    e  go to state 74


State 69

   27 num_exp: num_exp . _AROP exp
   37 argument: num_exp .

    _AROP  shift, and go to state 57

    $default  reduce using rule 37 (argument)


State 70

   35 function_call: _ID $@4 _LPAREN argument . _RPAREN

    _RPAREN  shift, and go to state 75


State 71

   27 num_exp: num_exp . _AROP exp
   48 rel_exp: num_exp _RELOP num_exp .

    _AROP  shift, and go to state 57

    $default  reduce using rule 48 (rel_exp)


State 72

   45 e: _AND . $@7 rel_exp

    $default  reduce using rule 44 ($@7)

    $@7  go to state 76


State 73

   47 e: _OR . $@8 rel_exp

    $default  reduce using rule 46 ($@8)

    $@8  go to state 77


State 74

   42 if_part: _IF _LPAREN $@5 rel_exp $@6 e . _RPAREN statement

    _RPAREN  shift, and go to state 78


State 75

   35 function_call: _ID $@4 _LPAREN argument _RPAREN .

    $default  reduce using rule 35 (function_call)


State 76

   45 e: _AND $@7 . rel_exp

    _ID           shift, and go to state 42
    _INT_NUMBER   shift, and go to state 43
    _UINT_NUMBER  shift, and go to state 44
    _LPAREN       shift, and go to state 45

    num_exp        go to state 61
    exp            go to state 47
    literal        go to state 48
    function_call  go to state 49
    rel_exp        go to state 79


State 77

   47 e: _OR $@8 . rel_exp

    _ID           shift, and go to state 42
    _INT_NUMBER   shift, and go to state 43
    _UINT_NUMBER  shift, and go to state 44
    _LPAREN       shift, and go to state 45

    num_exp        go to state 61
    exp            go to state 47
    literal        go to state 48
    function_call  go to state 49
    rel_exp        go to state 80


State 78

   42 if_part: _IF _LPAREN $@5 rel_exp $@6 e _RPAREN . statement

    _IF        shift, and go to state 30
    _RETURN    shift, and go to state 31
    _ID        shift, and go to state 32
    _LBRACKET  shift, and go to state 33

    statement             go to state 81
    compound_statement    go to state 36
    assignment_statement  go to state 37
    if_statement          go to state 38
    if_part               go to state 39
    return_statement      go to state 40


State 79

   45 e: _AND $@7 rel_exp .

    $default  reduce using rule 45 (e)


State 80

   47 e: _OR $@8 rel_exp .

    $default  reduce using rule 47 (e)


State 81

   42 if_part: _IF _LPAREN $@5 rel_exp $@6 e _RPAREN statement .

    $default  reduce using rule 42 (if_part)
